selected distribution display

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <a class="dropdown-item" href="#" onclick="Addvalues('M/M/4')">M/M/4</a>
                 </div>
             </div>
+            <p><strong>Selected Distribution : </strong><span id="distribution-display">None</span></p>
 
 
             <br /> <br />
