--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css" type="text/css">
-    
+
 
 </head>
 
@@ -37,29 +37,41 @@
             </select> -->
 
             <div class="btn-group">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
                     Select any distribution
                 </button>
                 <div class="dropdown-menu w-100 ">
-                    <a class="dropdown-item" href="#" onclick="Addvalues('M/M/1')">M/M/1</a>
+                    <a class="dropdown-item" href="#" onclick="setSelectedDistributionValue('M/M/1')">M/M/1</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" onclick="Addvalues('M/M/2')">M/M/2</a>
+                    <a class="dropdown-item" href="#" onclick="setSelectedDistributionValue('M/M/2')">M/M/2</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" onclick="Addvalues('M/M/3')">M/M/3</a>
+                    <a class="dropdown-item" href="#" onclick="setSelectedDistributionValue('M/M/3')">M/M/3</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#" onclick="Addvalues('M/M/4')">M/M/4</a>
+                    <a class="dropdown-item" href="#" onclick="setSelectedDistributionValue('M/M/4')">M/M/4</a>
                 </div>
             </div>
-            <p><strong>Selected Distribution : </strong><span id="distribution-display">None</span></p>
+            <p>
+                <strong>Selected Distribution : </strong>
+                <input type="text" class="form-control w-100" placeholder="Selected Distribution" id="queuing-model">
+            </p>
 
 
             <br /> <br />
 
-            <input type="text" placeholder="Mean of Arrival Distribution" id="mean-arrival"> <br /> <br />
+            <!-- <input type="text" placeholder="Mean of Arrival Distribution" id="mean-arrival"> <br /> <br />
 
 
-            <input type="number" placeholder="Mean of service" id="service-mean"> <br /><br />
+            <input type="number" placeholder="Mean of service" id="service-mean"> <br /><br /> -->
+
+            <div class="input-group mb-3 d-flex flex-column">
+                <input type="text" class="form-control w-100 " placeholder="Mean of Arrival Distribution" id="mean-arrival">
+            </div>
+
+            <div class="input-group mb-3">
+                <input type="text" class="form-control w-100 " placeholder="Mean of service" id="service-mean">
+
+            </div>
 
 
             <!-- <input type="number" placeholder="Number of observations" id="observations"> <br /> <br /> -->
