feat: input type updated

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 </p>
 
                 <div class="input-group mb-3 d-flex flex-column mean-input-boxes">
-                    <input type="text" class="form-control w-100 py-3" placeholder="Mean of Arrival Distribution"
+                    <input type="number" class="form-control w-100 py-3" placeholder="Mean of Arrival Distribution"
                         id="mean-arrival">
                 </div>
 
                 <div class="input-group mb-3 mean-input-boxes">
-                    <input type="text" class="form-control w-100 py-3" placeholder="Mean of service" id="service-mean">
+                    <input type="number" class="form-control w-100 py-3" placeholder="Mean of service" id="service-mean">
 
                 </div>
 
