feat: service time chart created

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <br /> <br />
     <div class="charts-container px-2">
         <div id="linechart"></div>
+        <div id="linechart-service"></div>
     </div>
     
     <!-- TABLES -->
