feat: generic function created for graphs

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <div class="charts-container px-2">
         <div id="linechart"></div>
         <div id="linechart-service"></div>
+        <div id="linechart-turnAround"></div>
     </div>
     
     <!-- TABLES -->
