feat: cards css updated

--- a/index.html
+++ b/index.html
@@ -142,8 +142,31 @@
         <div id="linechart"></div>
         <div id="linechart-service"></div>
         <div id="linechart-turnAround"></div>
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-body text-center justify-content-center d-flex flex-column">
+                    <h5 class="card-title">Server Utilization</h5>
+                    <p id="server-utlization" class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body text-center justify-content-center d-flex flex-column">
+                    <h5 class="card-title">Average Turn around time</h5>
+                    <p id="avg-turnaround" class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body text-center justify-content-center d-flex flex-column">
+                    <h5 class="card-title">Average Wait time</h5>
+                    <p id="avg-wait" class="card-text"></p>
+                </div>
+            </div>
+        </div>
+
     </div>
-    
+
+
+
     <!-- TABLES -->
     <br /> <br />
     <div class="container-table">
@@ -171,7 +194,7 @@
 
     <br /> <br />
 
-    <div class="Calculate">
+    <!-- <div class="Calculate">
         <div>
             <span><b>Server Utilization</b></span>
             <p id="server-utlization"></p>
@@ -183,7 +206,7 @@
 
 
         </div>
-    </div>
+    </div> -->
 
 
 
