feat: cards updated

--- a/index.html
+++ b/index.html
@@ -143,19 +143,13 @@
         <div id="linechart-service"></div>
         <div id="linechart-turnAround"></div>
         <div class="cards-container">
-            <div class="card">
-                <div class="card-body text-center justify-content-center d-flex flex-column">
-                    <h5 class="card-title">Server Utilization</h5>
-                    <p id="server-utlization" class="card-text"></p>
-                </div>
-            </div>
-            <div class="card">
+            <div class="card kpi">
                 <div class="card-body text-center justify-content-center d-flex flex-column">
                     <h5 class="card-title">Average Turn around time</h5>
                     <p id="avg-turnaround" class="card-text"></p>
                 </div>
             </div>
-            <div class="card">
+            <div class="card kpi">
                 <div class="card-body text-center justify-content-center d-flex flex-column">
                     <h5 class="card-title">Average Wait time</h5>
                     <p id="avg-wait" class="card-text"></p>
