feat: mm1 cp table separated

--- a/index.html
+++ b/index.html
@@ -160,6 +160,29 @@
     </div>
 
 
+    <!-- CP TABLE -->
+     <br>
+     <div class="container-table">
+        <table id="cp_table" class="sim-table">
+            <tr>
+                <!-- <th>Serial Number</th> -->
+                <th>Cp Lookup</th>
+                <th>Cp </th>
+                <th>Avg Time Between Arrival</th>
+                <!-- <th>Inter Arrival</th>
+                <th>Arrival Time</th>
+                <th>Service Time</th>
+                <th>Start Time</th>
+                <th>End Time</th>
+                <th>Turnaround Time</th>
+                <th>Wait Time</th>
+                <th>Response Time</th>
+                <th>Server</th> -->
+            </tr>
+        </table>
+
+    </div>
+
 
     <!-- TABLES -->
     <br /> <br />
@@ -168,9 +191,9 @@
             <!-- The table headers -->
             <tr>
                 <th>Serial Number</th>
-                <th>Cp Lookup</th>
-                <th>Cp </th>
-                <th>Avg Time Between Arrival</th>
+                <!-- <th>Cp Lookup</th> -->
+                <!-- <th>Cp </th> -->
+                <!-- <th>Avg Time Between Arrival</th> -->
                 <th>Inter Arrival</th>
                 <th>Arrival Time</th>
                 <th>Service Time</th>
