feat:Simulation time input box created

--- a/index.html
+++ b/index.html
@@ -59,8 +59,16 @@
                 </div>
 
 
-
                 <br /> <br />
+                <p class="mb-3 ">
+                    <strong>
+                        Input Simulation Time (min)
+                    </strong>
+                </p>
+
+                <div class="input-group mb-3 d-flex flex-column mean-input-boxes">
+                    <input type="number" class="form-control w-100 py-3" placeholder="Simulation Time">
+                </div>
 
                 <!-- <input type="text" placeholder="Mean of Arrival Distribution" id="mean-arrival"> <br /> <br />
     
