feat: css updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="px-2 py-5 top-container">
-        <div class="container-1">
+        <div class="container-1 mb-2">
 
             <div class="div-heading">
                 <h1 class="heading">Carrefour Queueing Simulation</h1>
