feat:mm1 simulation function craeted

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </p>
 
                 <div class="input-group mb-3 d-flex flex-column mean-input-boxes">
-                    <input type="number" class="form-control w-100 py-3" placeholder="Simulation Time">
+                    <input type="number" class="form-control w-100 py-3" placeholder="Simulation Time" id="simulation-time">
                 </div>
 
                 <!-- <input type="text" placeholder="Mean of Arrival Distribution" id="mean-arrival"> <br /> <br />
