feat: box created for params

--- a/index.html
+++ b/index.html
@@ -151,17 +151,23 @@
         <div id="linechart"></div>
         <div id="linechart-service"></div>
         <div id="linechart-turnAround"></div>
-        <div class="cards-container">
-            <div class="card kpi">
-                <div class="card-body text-center justify-content-center d-flex flex-column">
-                    <h5 class="card-title">Average Turn around time</h5>
-                    <p id="avg-turnaround" class="card-text"></p>
-                </div>
+        <div style="display: flex; flex-direction: column;">
+            <div class="calculate-params-container">
+
             </div>
-            <div class="card kpi">
-                <div class="card-body text-center justify-content-center d-flex flex-column">
-                    <h5 class="card-title">Average Wait time</h5>
-                    <p id="avg-wait" class="card-text"></p>
+
+            <div class="cards-container">
+                <div class="card kpi">
+                    <div class="card-body text-center justify-content-center d-flex flex-column">
+                        <h5 class="card-title">Average Turn around time</h5>
+                        <p id="avg-turnaround" class="card-text"></p>
+                    </div>
+                </div>
+                <div class="card kpi">
+                    <div class="card-body text-center justify-content-center d-flex flex-column">
+                        <h5 class="card-title">Average Wait time</h5>
+                        <p id="avg-wait" class="card-text"></p>
+                    </div>
                 </div>
             </div>
         </div>
