feat: css update for params text

--- a/index.html
+++ b/index.html
@@ -153,7 +153,22 @@
         <div id="linechart-turnAround"></div>
         <div style="display: flex; flex-direction: column;">
             <div class="calculate-params-container">
-
+                <div class="params-text">
+                    <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length : </h5>
+                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                </div>
+                <div class="params-text">
+                    <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (Queue) : </h5>
+                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                </div>
+                <div class="params-text">
+                    <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (system) : </h5>
+                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                </div>
+                <div class="params-text">
+                    <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length (system) : </h5>
+                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                </div>
             </div>
 
             <div class="cards-container">
