--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
             <div class="calculate-params-container">
                 <div class="params-text">
                     <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length : </h5>
-                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                    <p id="lq" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
                     <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (Queue) : </h5>
-                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                    <p id="wq" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
                     <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (system) : </h5>
-                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                    <p id="ws" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
                     <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length (system) : </h5>
-                    <p id="avg-wait" class="card-text" style="color: crimson;"></p>
+                    <p id="ls" class="card-text" style="color: crimson;"></p>
                 </div>
             </div>
 
