feat: params text update

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div style="display: flex; flex-direction: column;">
             <div class="calculate-params-container">
                 <div class="params-text">
-                    <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length : </h5>
+                    <h5 style="margin-bottom: 0;" class="card-title">Number of customers in the queue (LQ) : </h5>
                     <p id="lq" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
@@ -166,7 +166,7 @@
                     <p id="ws" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
-                    <h5 style="margin-bottom: 0;" class="card-title">Avg Queue Length (system) : </h5>
+                    <h5 style="margin-bottom: 0;" class="card-title">Average number of customers (L) </h5>
                     <p id="ls" class="card-text" style="color: crimson;"></p>
                 </div>
             </div>
