feat: text update

--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
                     <p id="lq" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
-                    <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (Queue) : </h5>
+                    <h5 style="margin-bottom: 0;" class="card-title">Time in queue (WQ) : </h5>
                     <p id="wq" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
-                    <h5 style="margin-bottom: 0;" class="card-title">Avg Waiting Time (system) : </h5>
+                    <h5 style="margin-bottom: 0;" class="card-title">Average time spent in the system (W) </h5>
                     <p id="ws" class="card-text" style="color: crimson;"></p>
                 </div>
                 <div class="params-text">
